添加css压缩及白屏动画 提升体验

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0, user-scalable=0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="./index.css">
     <!-- <style type="text/css">html {-webkit-filter: grayscale(100%);}</style> -->
     <title>东林奥林--傲视东林</title>
     <script>
@@ -21,7 +22,19 @@
     <noscript>
       <strong>We're sorry but vue-web-mongodb-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+
+      <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+        <div class="load_title">正在走近奥林,请耐心等待...
+          <br>
+          <p>By 2019210109</p>
+        </div>
+      </div>
+
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
